--- a/package.json
+++ b/package.json
@@ -17,13 +17,22 @@
   "private": true,
   "dependencies": {
     "@adonisjs/ace": "^5.0.8",
+    "@adonisjs/antl": "^2.0.7",
     "@adonisjs/auth": "^3.0.7",
     "@adonisjs/bodyparser": "^2.0.5",
     "@adonisjs/cors": "^1.0.7",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/mail": "^3.0.10",
+    "@adonisjs/redis": "^2.0.7",
+    "@adonisjs/validator": "^5.0.6",
+    "@sentry/node": "5.13.2",
+    "adonis-kue": "^5.0.1",
+    "moment": "^2.24.0",
+    "pg": "^7.18.2",
+    "raven": "^2.6.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
